--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         tools:context=".MainActivity">
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listView"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-    </ListView>
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
